# JoTang2025

./: .gitignore  README.md  linux.md  temp.java  temp.md
#1_git/: learn.md
#2_markdown/: 语法总结.md
#3_ubuntu/: 安装流程.md
#4_CMake/: learn.md
#4_CMake/MakeFile_CMake/: learn_compile.md
#4_CMake/MakeFile_CMake/for_docker/: README.md
#4_CMake/MakeFile_CMake/my_modular_project/: CMakeLists.txt
#4_CMake/MakeFile_CMake/my_project_CMake/: README.md
#4_CMake/MakeFile_CMake/my_project_MakeFile/: README.md
#4_CMake/MakeFile_CMake/my_project_MakeFile/src/: utils.c
#4_CMake/Task/: Task.md
#4_CMake/Task/demo-main/MakeFile/: CMakeLists.txt  Makefile
#4_CMake/Task/demo-main/compile_process/: demo.out  demo.s
#4_CMake/my_modular_project/app/: CMakeLists.txt
#4_CMake/my_modular_project/app/src/: main.c
#4_CMake/my_modular_project/libmath/src/: math_utils.c
#4_CMake/my_modular_project/libprint/: CMakeLists.txt
#4_CMake/my_project_CMake/src/: main.c
#4_CMake/my_project_MakeFile/: makefile
#4_CMake/my_project_MakeFile/include/: utils.h
#5_BackEnd/: learn.md
#5_BackEnd/Documents/: Redis.md  User.md  docker.md  exception.md  order.md  product.md  sql.md
#5_BackEnd/demo/: Dockerfile  pom.xml
#5_BackEnd/demo/Documents/: Redis.md  Spring.md  User.md  bugs.md  demoPay.md  error.md  exception.md  interceptor.md  learn.md  order.md  product.md
#5_BackEnd/demo/src/main/resources/: application.yml
#5_BackEnd/demo/src/main/resources/static/: admin.html  cart.html  forgot-password.html  index.html  login.html  product-detail.html  products.html  register.html  user-center.html
#5_BackEnd/demo/src/main/resources/static/css/: styles.css
#5_BackEnd/demo/src/main/resources/static/js/: api.js  auth.js  main.js
5_BackEnd/: README.md  docker-compose.yml
5_BackEnd/Documents/: RabbitMQ.md  Redis.md  Server_test.postman_collection.json  Spring.md  bugs.md  demoPay.md  docker.md  exception.md  learn.md  server.md
5_BackEnd/Documents/java/: proxy.md
5_BackEnd/Documents/spring/: AOP.md  IOC.md  interceptor.md
5_BackEnd/RabbitMQ/: docker-compose.yml
5_BackEnd/RabbitMQ/src/main/resources/: application.yml  schema.sql
5_BackEnd/app/: docker-compose.yml
5_BackEnd/demo/: Dockerfile  docker-compose.yml  pom.xml
5_BackEnd/demo/db-init/: 01-init-tables.sql
5_BackEnd/demo/src/main/resources/: application.yml
5_BackEnd/demo/src/main/resources/static/: index.html
5_BackEnd/spring-test/src/main/resources/: application.xml  application.yml
5_BackEnd/spring_junit/: pom.xml
5_BackEnd/spring_junit/src/main/resources/: application.properties
BackEnd/Documents/: RabbitMQ.md  Redis.md  docker.md  sql.md
BackEnd/Documents/java/: 工厂模式.md
BackEnd/Documents/spring/: AOP.md  IOC.md  Spring.md  dataVertify.md  encrypt.md  jwt.md  restful.md
BackEnd/Documents/接口文档/: User.md
BackEnd/RabbitMQ/: pom.xml
BackEnd/demo/: docker-compose.yml
BackEnd/demo/db-init/: 01-init-tables.sql
BackEnd/demo/src/main/resources/: application.yml
BackEnd/thymeleaf/thymeleaf/: pom.xml
BackEnd/thymeleaf/thymeleaf/src/main/resources/: application.yml
BackEnd/thymeleaf/thymeleaf/src/main/resources/templates/: demo.html
CMake/MakeFile_CMake/for_docker/: CMakeLists.txt
CMake/MakeFile_CMake/my_modular_project/: README.md
CMake/MakeFile_CMake/my_modular_project/libmath/: CMakeLists.txt
CMake/MakeFile_CMake/my_modular_project/libprint/src/: print_utils.c
CMake/Task/: Task.md
CMake/Task/demo-main/compile_process/: demo.i
algorithm/: 单调栈.md
algorithm/MonotonicStack/: t.java  单调栈.md
algorithm/array/: T26.java  T966.java  数组.md
git/: learn.md
markdown/: 语法总结.md
spring-test/: pom.xml
spring-test/src/main/java/com/example/spring_test/: MailService.java  User.java  UserService.java
(+130 files in other folders)
